@@ -56,7 +56,7 @@ proftpd_requirevalidshell=${proftpd_requirevalidshell:-"off"}
 proftpd_deleteabortedstores=${proftpd_deleteabortedstores:-"off"}
 proftpd_tlsverifyclient=${proftpd_tlsverifyclient:-"off"}
 proftpd_tlsoptions=${proftpd_tlsoptions:-"NoCertRequest"}
-proftpd_tlsprotocol=${proftpd_tlsprotocol:-"SSLv23"}
+proftpd_tlsprotocol=${proftpd_tlsprotocol:-"TLSv1"}
 proftpd_tlsrequired=${proftpd_tlsrequired:-"on"}
 proftpd_tcpaccesssysloglevels=${proftpd_tcpaccesssysloglevels:-"info warn"}
 proftpd_tcpservicename=${proftpd_tcpservicename:-"ftpd"}
