@@ -18,6 +18,7 @@ Changes:
 - Create 4KB(ashift=12) ZFS pool by default.
 - Improve software raid info pages with Ajax.
 - Increase upload size in Webserver service up to 16GiB. (websrv_maxrequestsize)
+- dropp SSL support proftpd.  (TLS connections are supported)
 - Support aclinherit/aclmode ZFS properties.
 - Use SHA-512 crypt password for admin. (WebGUI login and all services)
 - Use SHA-512 crypt password File Manager.
